# jester

./: .gitignore  pyproject.toml
autoencoder/: autoencoder.py
mlp/mlp/: perceptron.py
ridge_regression/: __init__.py
src/jester/: __init__.py
svm/: __init__.py
