[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jester-ml"
version = "0.1.0"
description = "Machine learning algorithms implemented from scratch in Python."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Nathan Delcid" }
]
keywords = ["machine-learning", "algorithms", "education", "numpy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
    "scikit-learn>=0.24.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
text = [
    "nltk>=3.6.0",
]
dev = [
    "build>=1.0.0",
    "pytest>=6.0",
    "pytest-cov>=2.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/jester"
Repository = "https://github.com/yourusername/jester"

[tool.setuptools]
packages = [
    "decision_trees",
    "ensemble_methods",
    "features",
    "knn",
    "logistic_regression",
    "mlp",
    "ridge_regression",
    "svm",
    "utils",
]
py-modules = ["helpers"]

[tool.setuptools.package-dir]
decision_trees = "decision_trees/decision_trees"
ensemble_methods = "ensemble_methods/ensemble_methods"
features = "mlp/features"
knn = "knn/knn"
logistic_regression = "logistic_regression"
mlp = "mlp/mlp"
ridge_regression = "ridge_regression"
svm = "svm"
utils = "mlp/utils"

[tool.pytest.ini_options]
testpaths = [
    "knn",
    "mlp/tests",
]
python_files = ["test_*.py", "tests.py"]
