[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jester-ml"
version = "0.2.0"
description = "Machine learning algorithms implemented from scratch in Python."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Nathan Delcid" }
]
keywords = ["machine-learning", "algorithms", "education", "numpy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
torch = [
    "torch",
]
text = [
    "nltk>=3.6.0",
]
dev = [
    "build>=1.0.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/jester"
Repository = "https://github.com/yourusername/jester"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "tests.py"]
